--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "json_utils",
   "displayName": "JSON Utils",
   "description": "Utility functions for working with JSON data in Pulse Editor.",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "private": true,
   "type": "module",
   "scripts": {
@@ -25,9 +25,9 @@
     "react-dom": "19.2.0"
   },
   "devDependencies": {
-    "@module-federation/enhanced": "0.19.1",
-    "@module-federation/node": "2.7.17",
-    "@module-federation/runtime": "0.19.1",
+    "@module-federation/enhanced": "^0.21.6",
+    "@module-federation/node": "^2.7.25",
+    "@module-federation/runtime": "^0.21.6",
     "@pulse-editor/cli": "^0.1.1-beta.7",
     "@tailwindcss/postcss": "^4.1.14",
     "@types/cors": "^2.8.19",
